--- a/document-structure/cart/task.css
+++ b/document-structure/cart/task.css
@@ -1,6 +1,16 @@
 body {
   font-family: Arial;
+  position: relative;
 }
+
+.cart__title {
+  display: none;
+}
+
+.cart__title_activated {
+  display: block;
+}
+
 .cart__products {
   display: flex;
   justify-content: center;
@@ -26,10 +36,22 @@ body {
   height: 100px;
   object-fit: contain;
 }
+
+.card__product-remove {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: red;
+  font-size: 30px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .product {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  
 }
 .product__title {
   width: 100%;
@@ -41,18 +63,23 @@ body {
   object-fit: contain;
 }
 
+.moved__img {
+  position: absolute;
+  transition: all var(--speed);
+}
+
 .product__quantity-title {
   text-transform: uppercase;
 }
 
-.product__quantity-controls {
+.product__quantity-controls, .cart__quantity-controls{
   display: flex;
   margin: 10px 0;
   justify-content: center;
   align-items: center;
 }
 
-.product__quantity-control {
+.product__quantity-control, .cart__quantity-control {
   padding: 5px 10px;
   box-sizing: border-box;
   cursor: pointer;
@@ -64,7 +91,7 @@ body {
   font-weight: bold;
 }
 
-.product__quantity-control:hover {
+.product__quantity-control:hover, .cart__quantity-control:hover {
   background: gray;
   color: #fff;
 }
